# slask

./: LICENSE  README.md  slask.cabal  timeedit.cabal
app/: Main.hs
src/: TimeEdit.hs
