name:                timeedit
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/pnutus/timeedit#readme
license:             BSD3
license-file:        LICENSE
author:              Pontus Granström
maintainer:          pnutus@gmail.com
copyright:           Pontus Granström
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TimeEdit
  build-depends:       base >= 4.7 && < 5,
                       http-conduit >= 2.1.8,
                       bytestring,
                       text,
                       time,
                       cassava,
                       tagsoup,
                       vector,
                       stringsearch,
                       monads-tf
  default-language:    Haskell2010

executable timeedit
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timeedit
                     , scotty
                     , transformers
                     , blaze-html
                     , text
                     , time
                     , http-conduit
  default-language:    Haskell2010

test-suite timeedit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timeedit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pnutus/timeedit
